# logs-anomaly-detection

./: pyproject.toml  test.py
logs/: constant.py  logs-generator.py  preprocessing.py  training.py
models/: isolation_forest.joblib
